[package]
name = "pbrt"
version = "0.1.0"
authors = ["Callym <callym.cooke@gmail.com>"]

[dependencies]
bitflags = "1.0"
cgmath = { version = "0.16", features = ["simd", "swizzle"] }
crossbeam = "0.3"
derive_more = "0.11"
hexf = "0.1"
itertools = "0.7"
lazy_static = { version = "1.0", features = ["nightly"] }
noisy_float = "0.1"
num = "0.2"
num_cpus = "1.8"
rand = "0.5"
rayon = "1.0"
shrinkwraprs = "0.2"
xoshiro = "0.0.3"

pbrt-proc = { path = '../pbrt-proc' }

[features]
default = []
double = []
